Tweaked alignment on content article, added 'active' class to links and code adding and removing that class based on correct page.

--- a/css/main.less
+++ b/css/main.less
@@ -37,6 +37,9 @@ nav{
 				}
 			
 			}
+			a.active{
+				color:#264bd9;
+			}
 		}
 	}
 
@@ -59,7 +62,7 @@ nav{
 #bottomnav{
 	position:relative;
 	margin-top:30px;
-	padding-left:340px;
+	padding-left:330px;
 	left:0px;
 	background-color:#c9c9c9;
 	height:63px;
@@ -80,8 +83,8 @@ nav{
 #content nav{
 	position:absolute;
 	top:20px;
-	left:150px;
-	width:100px;
+	left:130px;
+	width:140px;
 	height:100%;
 	color:#fff;
 	text-align:right;
@@ -111,7 +114,7 @@ nav{
 		font-size:13px;
 		font-weight:normal;
 		margin-top:140px;
-		letter-spacing:2px;
+		// letter-spacing:2px;
 		line-height:20px;
 		b{
 			font-weight:bold;
@@ -127,9 +130,9 @@ nav{
 	
 	font-size:1.2em;
 	line-height:1.3em;
-	padding:20px;
+	padding:10px;
 	color:#fff;
-	left:340px;
+	left:350px;
 
 	width:800px;
 	height:390px;
